--- a/village/src/App.css
+++ b/village/src/App.css
@@ -1,3 +1,19 @@
 .App {
-  text-align: center;
+    height: 1000px;
+    background-image: url("./components/images/smurfs.jpg");
+    background-size: 2000px
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+a {
+    text-decoration: none;
+    font-size: 2rem;
+    margin-right: 10px;
+    color: white;
+    text-shadow: 2px 2px dodgerblue;+
+    cursor: pointer;
 }
